# airbnb-challenge

./: db.sqlite3  pyproject.toml
common/: models.py
config/: settings.py  urls.py
tweets/: admin.py  models.py  serializers.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_alter_like_tweet_alter_like_user_alter_tweet_user.py
tweets/templates/: home.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_name.py
